# python-web-scraper

./: README.md  app.py  pyproject.toml
helpers/: file.py
models/: job.py
scrapers/: scrape_bsj.py  scrape_web3.py  scrape_wwr.py
static/styles/: style.css
templates/: home.html  search.html
tests/: test.py
